# VST3-Synth-Lakewood

./: CMakeLists.txt  README.md
include/: lakewoodController.h  lakewoodControllerIncludes.h  lakewoodIDs.h  lakewoodParameters.h  lakewoodProcessor.h  lakewoodProcessorIncludes.h  lakewoodUIDs.h  lakewoodVersion.h  midiFrequencies.h
resource/: Info.plist  plug.rc
source/: lakewoodController.cpp  lakewoodFactory.cpp  lakewoodProcessor.cpp
